@@ -24,6 +24,7 @@ EXTERNAL TODO:
 ** 0.0.37 **
 
 Added support for playSFX without caching (xbmc git: 5579740e9881717c65518b81a9a2b4d9526c3307)
+-Enable in Settings::Advanced (temporary setting until relevant change is in an XBMC release) 
 Added the ability to output wavs to a tmpfs (/run/shm or /dev/shm with fallback to /tmp)
 Added speaking for typing in the numeric and IP address inputs
 Added backend for eckythump's HTTP speech wav server
